add tests to readme

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "toml-path"
-description = "jq for tomls"
+description = "jq for tomls (library and binary)"
 version = "0.1.0"
 edition = "2021"
 license = "MIT OR Apache-2.0"
