--- a/deny.toml
+++ b/deny.toml
@@ -1,7 +1,4 @@
 [licenses]
 # We want really high confidence when inferring licenses from text - taken from  cargo-deny's own deny.toml
 confidence-threshold = 0.93
-allow = [
-  "Apache-2.0",
-  "MIT"
-]
+allow = ["Apache-2.0", "MIT"]
